# suite-branding

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
pressply_branding/: boot.py  build.json  hooks.py  install.py  modules.txt  utils.py
pressply_branding/pressply_suite_branding/: __init__.py  desktop.py
pressply_branding/pressply_suite_branding/page/pressply_integrations/: pressply_integrations.js  pressply_integrations.json
pressply_branding/pressply_suite_branding/page/pressply_settings/: pressply_settings.js  pressply_settings.json
pressply_branding/public/js/: pressply_branding.js
pressply_branding/translations/: en.csv
